UI fix: use simple CSS Grid instead so that the textarea doesn't break the grid

--- a/frontend/src/app/text-analyzer/text-analyzer.css
+++ b/frontend/src/app/text-analyzer/text-analyzer.css
@@ -10,13 +10,19 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 50%;
+  min-width: 400px;
+  width: 50vw;
   padding: 20px;
   box-sizing: border-box;
 }
 
-.options-container {
-  display: flex;
-  column-gap: 18px;
-  align-items: center;
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  gap: 10px;
+  width: 100%;
+
+  div {
+    align-content: center;
+  }
 }
